Update index.hadding the first task to index.html ( додавання першого завдання до indeh.html)tml
adding the first task to index.html (
додавання першого завдання до indeh.html)

--- a/index.html
+++ b/index.html
@@ -170,6 +170,61 @@
           <div class="content-item_personal-data__right-side">
             <ul>
               <li><span class="font-b"><a href="https://www.youtube.com/watch?v=4ng6l4MRzDQ">1.Посилання на проморолик до комп`ютерної гри "Territory of cyber dangers" </a></span></li>
+		    <li>
+               <div >
+                <span>Завдання : візитівка - "Лимон"</span>
+                <a href="my_works/task_5/task_5.1-lemon_center-vertical+gorizontal/index.html" class="btn">Завдання_5.1</a>
+              </div>
+                <div >
+                <span>Завдання : візитівка - Ан-225 "Мрія" </span>
+                <a href="#" class="btn">Завдання_5.2</a>
+              </div>
+              <div >
+                <span>Завдання : "Шахівниця"</span>
+                <a href="#" class="btn">Завдання_5.3</a>
+              </div>
+            </li>
+            
+            <li>
+               <div >
+                <span>Завдання : "--Title--" (псевдоелементи)</span>
+                <a href="#" class="btn">Завдання_6.1 v.1</a>
+              </div>
+                             <div >
+                <span>Завдання : "--Title--" (псевдоелементи)</span>
+                <a href="#" class="btn">Завдання_6.1 v.2</a>
+              </div>
+                <div >
+                <span>Завдання : "Lable-UA" (два псевдоелементи)</span>
+                <a href="#" class="btn">Завдання_6.2 v.1</a>
+              </div>
+                              <div >
+                <span>Завдання : "Lable-UA" (два псевдоелементи)</span>
+                <a href="#" class="btn">Завдання_6.2 v.1.1</a>
+              </div>
+              <div >
+                <span>Завдання : "Lable-UA" (дві тіні)</span>
+                <a href="#" class="btn">Завдання_6.2 v.2</a>
+              </div>
+                            <div >
+                <span>Завдання : "Lable-UA" (межа та тінь)</span>
+                <a href="#" class="btn">Завдання_6.2 v.3</a>
+              </div>
+                            <div >
+                <span>Завдання : "Lable-UA" (тінь та псевдоелемент)</span>
+                <a href="#" class="btn">Завдання_6.2 v.4</a>
+              </div>
+              <div >
+                <span>Завдання : "Lable-UA" (межа та псевдоелемент)</span>
+                <a href="#" class="btn">Завдання_6.2 v.5</a>
+              </div>
+            </li>
+            <li>
+              <div >
+                <span>Завдання : "Бургер-меню"</span>
+                <a href="#" class="btn">Завдання_7</a>
+              </div>
+            </li>
             </ul>
           </div>
         </div>
