--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   </head>
   <body>
     <div class="page-wrapper">
-       
       <div class="left-side__content">
         <div class="left-side__img">
           <img
-            src="sourse/image/foto_faсe_3.jpeg"alt="Фото претендента на роботу"/>
+            src="sourse/image/foto_faсe_3.jpeg"
+            alt="Фото претендента на роботу"
+          />
         </div>
         <div class="left-side__content-item">
           <div class="content-item__title">Особисті дані</div>
-          <hr class="left-line">
+          <hr class="left-line" />
           <div class="content-item__personal-data__left-side">
             <ul>
               <li>
@@ -31,13 +32,15 @@
               </li>
               <li>
                 <span class="font-b d-block"> Номер телефону: </span>
-                <span>
-                  <a href="tel:+380667182423"> +38 066 718 24 23</a></span>
+                <span> <a href="tel:+380667182423"> +38 066 718 24 23</a></span>
               </li>
               <li>
                 <span class="font-b d-block"> Email: </span>
                 <span>
-                  <a href="mailto:sofist.new@gmail.com">sofist.new@gmail.com</a></span>
+                  <a href="mailto:sofist.new@gmail.com"
+                    >sofist.new@gmail.com</a
+                  ></span
+                >
               </li>
               <li>
                 <span class="font-b d-block"> Дата народження </span>
@@ -48,46 +51,49 @@
         </div>
 
         <div class="left-side__content-item__left-side">
-            <div class="content-item__title">Інтереси</div>
-            <hr class="left-line">
-            <div class="content-item__personal-data__left-side">
-					    <ul>
-						    <li><span class="font-b d-block"> Розробка сайтів </span></li>
-						    <li><span class="font-b d-block"> Фантастика та фентезі </span></li>
-						    <li><span class="font-b d-block"> Подорожі </span></li>
-						    <li><span class="font-b d-block"> S.T.A.L.K.E.R. - геймер </span></li>
-					    </ul>	
-				    </div>
+          <div class="content-item__title">Інтереси</div>
+          <hr class="left-line" />
+          <div class="content-item__personal-data__left-side">
+            <ul>
+              <li><span class="font-b d-block"> Розробка сайтів </span></li>
+              <li>
+                <span class="font-b d-block"> Фантастика та фентезі </span>
+              </li>
+              <li><span class="font-b d-block"> Подорожі </span></li>
+              <li>
+                <span class="font-b d-block"> S.T.A.L.K.E.R. - геймер </span>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="left-side__content-item__left-side">
-            <div class="content-item__title">Мови</div>
-            <hr class="left-line">
-            <div class="content-item__personal-data__left-side">
-					  <ul>
-						  <li class="d-flex">
-							  <span class="font-b"> Англійська </span>
-							  <span class="pull-f"> Середній рівень </span>
-						  </li>
-						  <li class="d-flex">
-							  <span class="font-b"> Українська </span>
-							  <span class="pull-f"> Рідна мова </span>
-						  </li>
-					  </ul>
-				  </div>
+          <div class="content-item__title">Мови</div>
+          <hr class="left-line" />
+          <div class="content-item__personal-data__left-side">
+            <ul>
+              <li class="d-flex">
+                <span class="font-b"> Англійська </span>
+                <span class="pull-f"> Середній рівень </span>
+              </li>
+              <li class="d-flex">
+                <span class="font-b"> Українська </span>
+                <span class="pull-f"> Рідна мова </span>
+              </li>
+            </ul>
+          </div>
         </div>
-
       </div>
 
       <div class="right-side__content">
         <div class="right-side__content-item">
           <h1>Олександр Руденко</h1>
-          <hr>
+          <hr />
         </div>
 
         <div class="right-side__content-item">
           <div class="content-item__title__right-side">Досвід роботи</div>
-          <hr>
+          <hr />
           <div class="content-item_personal-data__right-side">
             <ul>
               <li>
@@ -96,7 +102,10 @@
                   <span class="pull-f">лютий 2017 - лютий 2018</span>
                 </div>
                 <span class="d-block font-i">Академія КРОК, Київ</span>
-                <span class="d-block">Навчання в комп`ютерній академії "КРОК" на курсі "Java-developer"</span>
+                <span class="d-block"
+                  >Навчання в комп`ютерній академії "КРОК" на курсі
+                  "Java-developer"</span
+                >
               </li>
               <li>
                 <div class="d-flex">
@@ -104,8 +113,14 @@
                   <span class="pull-f">лютий 2018 - лютий 2020</span>
                 </div>
                 <span class="d-block font-i">Google,Youtube Київ</span>
-                <span class="d-block">Самоосвіта, удосконалення практичних навичок по java-програмуванню.<br>Робота над кодом до комп`ютерної гри "Territory of cyber dangers" <a href="https://www.youtube.com/watch?v=4ng6l4MRzDQ"> - посилання на проморолик</a></span>
-
+                <span class="d-block"
+                  >Самоосвіта, удосконалення практичних навичок по
+                  java-програмуванню.<br />Робота над кодом до комп`ютерної гри
+                  "Territory of cyber dangers"
+                  <a href="https://www.youtube.com/watch?v=4ng6l4MRzDQ">
+                    - посилання на проморолик</a
+                  ></span
+                >
               </li>
               <li>
                 <div class="d-flex">
@@ -121,7 +136,7 @@
 
         <div class="right-side__content-item">
           <div class="content-item__title">Освіта і кваліфікації</div>
-          <hr>
+          <hr />
           <div class="content-item_personal-data__right-side">
             <ul>
               <li>
@@ -130,7 +145,10 @@
                   <span class="pull-f">лютий 2017 - лютий 2018</span>
                 </div>
                 <span class="d-block font-i">Академія КРОК, Київ</span>
-                <span class="d-block">Навчання в комп`ютерній академії "КРОК" на курсі "Java-developer"</span>
+                <span class="d-block"
+                  >Навчання в комп`ютерній академії "КРОК" на курсі
+                  "Java-developer"</span
+                >
               </li>
             </ul>
           </div>
@@ -138,7 +156,7 @@
 
         <div class="right-side__content-item">
           <div class="content-item__title">Курси</div>
-          <hr>
+          <hr />
           <div class="content-item_personal-data__right-side">
             <ul>
               <li>
@@ -154,7 +172,7 @@
 
         <div class="right-side__content-item">
           <div class="content-item__title">Навички</div>
-          <hr>
+          <hr />
           <div class="content-item_personal-data__right-side">
             <ul>
               <li>
@@ -166,70 +184,100 @@
 
         <div class="right-side__content-item">
           <div class="content-item__title">Мої роботи</div>
-          <hr>
+          <hr />
           <div class="content-item_personal-data__right-side">
             <ul>
-              <li><span class="font-b"><a href="https://www.youtube.com/watch?v=4ng6l4MRzDQ">1.Посилання на проморолик до комп`ютерної гри "Territory of cyber dangers" </a></span></li>
-		    <li>
-               <div >
-                <span>Завдання : візитівка - "Лимон"</span>
-                <a href="my_works/task_5/task_5.1-lemon_center-vertical+gorizontal/index.html" class="btn">Завдання_5.1</a>
-              </div>
-                <div >
-                <span>Завдання : візитівка - Ан-225 "Мрія" </span>
-                <a href="#" class="btn">Завдання_5.2</a>
-              </div>
-              <div >
-                <span>Завдання : "Шахівниця"</span>
-                <a href="#" class="btn">Завдання_5.3</a>
-              </div>
-            </li>
-            
-            <li>
-               <div >
-                <span>Завдання : "--Title--" (псевдоелементи)</span>
-                <a href="#" class="btn">Завдання_6.1 v.1</a>
-              </div>
-                             <div >
-                <span>Завдання : "--Title--" (псевдоелементи)</span>
-                <a href="#" class="btn">Завдання_6.1 v.2</a>
-              </div>
-                <div >
-                <span>Завдання : "Lable-UA" (два псевдоелементи)</span>
-                <a href="#" class="btn">Завдання_6.2 v.1</a>
-              </div>
-                              <div >
-                <span>Завдання : "Lable-UA" (два псевдоелементи)</span>
-                <a href="#" class="btn">Завдання_6.2 v.1.1</a>
-              </div>
-              <div >
-                <span>Завдання : "Lable-UA" (дві тіні)</span>
-                <a href="#" class="btn">Завдання_6.2 v.2</a>
-              </div>
-                            <div >
-                <span>Завдання : "Lable-UA" (межа та тінь)</span>
-                <a href="#" class="btn">Завдання_6.2 v.3</a>
-              </div>
-                            <div >
-                <span>Завдання : "Lable-UA" (тінь та псевдоелемент)</span>
-                <a href="#" class="btn">Завдання_6.2 v.4</a>
-              </div>
-              <div >
-                <span>Завдання : "Lable-UA" (межа та псевдоелемент)</span>
-                <a href="#" class="btn">Завдання_6.2 v.5</a>
-              </div>
-            </li>
-            <li>
-              <div >
-                <span>Завдання : "Бургер-меню"</span>
-                <a href="#" class="btn">Завдання_7</a>
-              </div>
-            </li>
+              <li class="my_works d-block">
+                <!-- <span class="font-b"
+                  ><a href="https://www.youtube.com/watch?v=4ng6l4MRzDQ"
+                    >1.Посилання на проморолик до комп`ютерної гри "Territory of
+                    cyber dangers"
+                  </a></span > -->
+                  <div >
+                    <span class="title_task d-block">Проморолик до комп`ютерної гри "Territory of
+                      cyber dangers"</span>
+                    <a href="https://www.youtube.com/watch?v=4ng6l4MRzDQ"
+                      class="btn"
+                      >youtube</a >
+                  </div>
+              </li>
+              <li class="my_works d-block">
+                <div>
+                  <span class="title_task d-block">Завдання : візитівка - "Лимон"</span>
+                  <a href="my_works/task_5/task_5.1-lemon_center-vertical+gorizontal/index.html"
+                    class="btn"
+                    >Завдання_5.1</a >
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : візитівка - Ан-225 "Мрія" </span>
+                  <a href="my_works/task_5/task_5.2-an-225-dream/cossacs.html"
+                    class="btn"
+                    >Завдання_5.2</a >
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Шахівниця"</span>
+                  <a href="my_works/task_5/chess-board/index.html"
+                    class="btn"
+                    >Завдання_5.3</a>
+                </div>
+              </li>
+
+              <li class="my_works d-block">
+                <div>
+                  <span class="title_task d-block">Завдання : "--Title--" (псевдоелементи)</span>
+                  <a href="my_works/task_6/task_1_var1/index.html"
+                    class="btn"
+                    >Завдання_6.1 v.1</a >
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "--Title--" (псевдоелементи)</span>
+                  <a href="my_works/task_6/task_1_var2(more_understandable)/index.html"
+                    class="btn"
+                    >Завдання_6.1 v.2</a >
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Lable-UA" (два псевдоелементи)</span>
+                  <a
+                    href="my_works/task_6/task_2_var1(two_pseudo-elements)/index.html"
+                    class="btn"
+                    >Завдання_6.2 v.1</a >
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Lable-UA" (два псевдоелементи)</span>
+                  <a
+                    href="my_works/task_6/task_2_var1(two_pseudo_elements_v2)/index.html"
+                    class="btn"
+                    >Завдання_6.2 v.1.1</a
+                  >
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Lable-UA" (дві тіні)</span>
+                  <a href="my_works/task_6/task_2_var2(two_shadows)/index.html" class="btn">Завдання_6.2 v.2</a>
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Lable-UA" (межа та тінь)</span>
+                  <a href="my_works/task_6/task_2_var3(border_shadow)/index.html" class="btn">Завдання_6.2 v.3</a>
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Lable-UA" (тінь та псевдоелемент)</span>
+                  <a href="my_works/task_6/task_2_var4(shadows_pseudo-elements)/index.html" class="btn">Завдання_6.2 v.4</a>
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Lable-UA" (межа та псевдоелемент)</span>
+                  <a href="my_works/task_6/task_2_var5(border_pseudo-elements)/index.html" class="btn">Завдання_6.2 v.5</a>
+                </div>
+              </li>
+              <li class="my_works d-block">
+                <div>
+                  <span class="title_task d-block">Завдання : "Бургер-меню"</span>
+                  <a href="my_works/task_7/burger_menu/index.html" class="btn">Завдання_7</a>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
-
       </div>
     </div>
   </body>
 </html>
+
