--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@
                   <span class="title_task d-block">Завдання : "Бургер-меню"</span>
                   <a href="my_works/task_7/burger_menu/index.html" class="btn">Завдання_7</a>
                 </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Рок-гурт"</span>
+                  <a href="my_works/task_9/task_metal-band/index.html" class="btn">Завдання_9</a>
+                </div>
               </li>
             </ul>
           </div>
