--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
                   <span class="title_task d-block">Завдання : "Рок-гурт"</span>
                   <a href="my_works/task_9/task_metal-band/index.html" class="btn">Завдання_9</a>
                 </div>
+                 <div>
+                  <span class="title_task d-block">Завдання : "Каталог товарів"</span>
+                  <a href="my_works/task_10/catalog_of_goods/index.html" class="btn">Завдання_10</a>
+                </div>
               </li>
             </ul>
           </div>
