--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <span>Олександр Руденко</span>
               </li>
               <li>
-                <span class="font-b d-block"> Адреса </span>
-                <span>вул. Прспект Корольова 12, кв. 60</span>
-                <span>08132 Київ</span>
+                <span class="font-b d-block"> Соцмережі </span>
+                <span> <a href="https://www.linkedin.com/feed/"
+                    >Linkedin</a</span>
               </li>
               <li>
                 <span class="font-b d-block"> Номер телефону: </span>
