--- a/my_works/task_7/burger_menu/index.html
+++ b/my_works/task_7/burger_menu/index.html
@@ -8,76 +8,62 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div class="page-background">
-      <div class="main-side">
-        <div class="left-side">
-          <div class="left-side__image">
-            <img
-              src="https://static.tildacdn.one/tild6238-3461-4135-a535-626636633838/burg21.jpg"
-              alt="фото гамбургера"
-            />
-
-            <div class="left_side__image__inscription">
-              <ul>
-                <li>БУРГЕР-</li>
-                <li>ITALIAN</li>
-                <li>!</li>
-                <li><span>усього</span>
-                  <span class="left-side__price__number">79</span>    
-                  <span class="currency">грн</span></li>
-              </ul>
-            </div>
-          </div>
+    <!-- <div class="page-background"> -->
+    <div class="main-side">
+      <div class="left-side">
+        <div class="left-side__inscription"></div>
+        <div class="inscription__lable__general">
+          <ul>
+            <li class="inscription__lable t-text">
+              <span class="d-block a-text"> бургер- </span>
+              <span class="d-block a-text"> italian </span>
+              <span class="d-block a-text"> ! </span>
+            </li>
+            <li class="inscription__lable a-text">
+              <p>
+                <span class="inscription__everything">усього</span>
+                <span class="inscription__price">79</span>
+                <span class="inscription__currency">грн</span>
+              </p>
+            </li>
+          </ul>
         </div>
+      </div>
 
-        <div class="right-side">
-          <div class="right-side__title">
-            Лови момент!
-          </div>
-          <div class="right-side__content__column-1">
-            <div class="right-side__content__item">
-              <ul>
-                <li class="right-side__content__item-name">MICHIGAN</li>
-                <li class="right-side__content__item-price">64.00 ГРН</li>
-              </ul>
+      <div class="right-side">
+        <div class="right-side__title">Лови момент!</div>
+        <div class="conteiner">
+          <div class="column">
+            <div class="column-item t-text">
+              <div class="column-item-title">Michigam</div>
+              <div class="column-item-price color-text">64.00 грн</div>
             </div>
-            <div class="right-side__content__item">
-              <ul>
-                <li class="right-side__content__item-name">Cheeseburger</li>
-                <li class="right-side__content__item-price">59.00 ГРН</li>
-              </ul>
+            <div class="column-item">
+              <div class="column-item-title">Cheeseburger</div>
+              <div class="column-item-price t-text color-text">59.00 грн</div>
             </div>
-            <div class="right-side__content__item">
-              <ul>
-                <li class="right-side__content__item-name">KETCHUP ROOM 2</li>
-                <li class="right-side__content__item-price">72.00 ГРН</li>
-              </ul>
+            <div class="column-item t-text">
+              <div class="column-item-title">Ketchup room2</div>
+              <div class="column-item-price color-text">72.00 грн</div>
             </div>
           </div>
-
-          <div class="right-side__content__column-2">
-            <div class="right-side__content__item">
-              <ul>
-                <li class="right-side__content__item-name">Beef BBQ</li>
-                <li class="right-side__content__item-price">59.00 ГРН</li>
-              </ul>
+          <div class="column">
+            <div class="column-item">
+              <div class="column-item-title">Beef BBQ</div>
+              <div class="column-item-price t-text color-text">59.00 грн</div>
             </div>
-            <div class="right-side__content__item">
-              <ul>
-                <li class="right-side__content__item-name">KETCHUP ROOM</li>
-                <li class="right-side__content__item-price">68.00 ГРН</li>
-              </ul>
+            <div class="column-item t-text">
+              <div class="column-item-title">Ketchup room</div>
+              <div class="column-item-price color-text">68.00 грн</div>
             </div>
-            <div class="right-side__content__item">
-              <ul>
-                <li class="right-side__content__item-name">KETCHUP ROOM 2</li>
-                <li class="right-side__content__item-price">55.00 ГРН</li>
-              </ul>
+            <div class="column-item t-text">
+              <div class="column-item-title">Elvis</div>
+              <div class="column-item-price color-text">55.00 грн</div>
             </div>
           </div>
         </div>
         <div class="right-side__button">
-          <button type="button" class="button">ВСЕ МЕНЮ</button>
+          <button type="button" class="button t-text">Все меню</button>
         </div>
       </div>
     </div>
