--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
                   <span class="title_task d-block">Завдання : "Каталог товарів"</span>
                   <a href="my_works/task_10/catalog_of_goods/index.html" class="btn">Завдання_10</a>
                 </div>
+                                 <div>
+                  <span class="title_task d-block">Практичне заняття : "CloudBudget"</span>
+                  <a href="my_works/practical-task_1/cloudBudget/index.html" class="btn">Практичне заняття_1</a>
+                </div>
               </li>
             </ul>
           </div>
