--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </div>
                                  <div>
                   <span class="title_task d-block">Практичне заняття : "CloudBudget"</span>
-                  <a href="my_works/practical-task_1/cloudBudget/index.html" class="btn">Практичне заняття_1</a>
+                  <a href="my_works/practical-task_1/cloudBudget/index.html" class="btn">Практичне_1</a>
                 </div>
               </li>
             </ul>
