--- a/my_works/practical-task_1/cloudBudget/index.html
+++ b/my_works/practical-task_1/cloudBudget/index.html
@@ -326,10 +326,10 @@
 			</div>
 		</footer>
 
-		<div id='modal' class="modal hide">
+		/*<div id='modal' class="modal hide">
 			<i id='closeModalIcon' class="fa-solid fa-xmark"></i>
 			<h2>Thank You!</h2>
-		</div>
+		</div>*/
 
 		<script src='script/script.js'></script>
 	</body>
