--- a/my_works/practical-task_1/cloudBudget/index.html
+++ b/my_works/practical-task_1/cloudBudget/index.html
@@ -32,10 +32,10 @@
 								<a href="#">Features</a>
 							</li>
 							<li>
-								<a href="#">Technology</a>
+								<a href="#">TECHNOLOGY</a>
 							</li>
 							<li>
-								<a href="#">Contact</a>
+								<a href="#">CONTACT</a>
 							</li>
 							<li>
 								<a href="#">Sign up</a>
@@ -59,10 +59,10 @@
 								<a href="#">Features</a>
 							</li>
 							<li>
-								<a href="#">Technology</a>
+								<a href="#">TECHNOLOGY</a>
 							</li>
 							<li>
-								<a href="#">Contact</a>
+								<a href="#">CONTACT</a>
 							</li>
 							<li>
 								<a href="#">Sign up</a>
