--- a/index.html
+++ b/index.html
@@ -275,9 +275,13 @@
                   <span class="title_task d-block">Завдання : "Каталог товарів"</span>
                   <a href="my_works/task_10/catalog_of_goods/index.html" class="btn">Завдання_10</a>
                 </div>
-                                 <div>
+                 <div>
                   <span class="title_task d-block">Практичне заняття : "CloudBudget"</span>
                   <a href="my_works/practical-task_1/cloudBudget/index.html" class="btn">Практичне_1</a>
+                </div>
+                  <div>
+                  <span class="title_task d-block">Завдання : "Grid-battle_task"</span>
+                  <a href="my_works/task_18/battle_task/index.html" class="btn">Практичне_18</a>
                 </div>
               </li>
             </ul>
