--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
                   <a
                     href="my_works/task_6/task_2_var1(two_pseudo_elements_v2)/index.html"
                     class="btn"
-                    >Завдання_6.2 v.1.1</a
-                  >
+                    >Завдання_6.2 v.1.1</a>
                 </div>
                 <div>
                   <span class="title_task d-block">Завдання : "Lable-UA" (дві тіні)</span>
@@ -281,7 +280,11 @@
                 </div>
                   <div>
                   <span class="title_task d-block">Завдання : "Grid-battle_task"</span>
-                  <a href="my_works/task_18/battle_task/index.html" class="btn">Практичне_18</a>
+                  <a href="my_works/task_18/battle_task/index.html" class="btn">Завдання_18</a>
+                </div>
+                <div>
+                  <span class="title_task d-block">Завдання : "Grid-alisayed"</span>
+                  <a href="my_works/task_18/alisayed/index.html" class="btn">Завдання_18</a>
                 </div>
               </li>
             </ul>
