--- a/my_works/task_18/alisayed/index.html
+++ b/my_works/task_18/alisayed/index.html
@@ -160,9 +160,9 @@
               <div class="content">
                 <p>Stay Connected With Us...</p>
                 <div class="icons-social">
-                  <img class="icon" src="img/icon/icon-f.png" alt="іконка-фейсбук">
-                  <img class="icon" src="img/icon/icon-b.png" alt="іконка-хз">
-                  <img class="icon" src="img/icon/icon-t.png" alt="іконка-твфтер">
+                  <!-- <img class="icon-f" src="img/icon/icon-f.png" alt="іконка-фейсбук">
+                  <img class="icon-b" src="img/icon/icon-b.png" alt="іконка-хз">
+                  <img class="icon-t" src="img/icon/icon-t.png" alt="іконка-твфтер"> -->
                 </div>
                 <p>Please Feel To Contat With my For Any King of Prject</p>
               </div>
