--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
                   <span class="title_task d-block">Завдання : "Grid-alisayed"</span>
                   <a href="my_works/task_18/alisayed/index.html" class="btn">Завдання_18</a>
                 </div>
+                                <div>
+                  <span class="title_task d-block">Завдання : "Фінальний проєкт"</span>
+                  <a href="my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html" class="btn">Фінальний проєкт</a>
+                </div>
               </li>
             </ul>
           </div>
