--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
@@ -17,8 +17,6 @@
 <body>
 	<div class="first-screen">
 		<header>
-			<!-- <div class="solid-line"></div> -->
-
 			<div class="content-wrap ">
 				<div class="top-banner__background">
 					<div class="top-banner d-flex justify-center align-center">
@@ -30,12 +28,8 @@
 				</div>
 				<div class="solid-line"></div>
 			</div>
-			<!-- <div class="solid-line"></div> -->
-			<!-- </div> -->
-			<!-- <div class="solid-line"> -->
 
-			<div class="content-wrap ">
-
+			<div class="content-wrap gray-background">
 				<div class="nav-bar d-flex space-between align-center relative">
 					<div class="logo-header d-flex ">
 						<div class="logo-header__img">
@@ -102,63 +96,62 @@
 			</div>
 			<!-- </div> -->
 		</header>
-
-		<div class="content-wrap">
-			<div class="first-screen__content_general">
-				<div class="first-screen__content d-flex-desktop">
-					<div class="first-screen__content_main d-flex-desktop column-flex">
-						<div class="title-banner">
-							<div class="first-screen__content_main_under-title">Your Journey to Tomorrow Begins Here</div>
-							<div class="first-screen__content_main_title">
-								<h1>Explore the Frontiers of Artificial Intelligence</h1>
-							</div>
-							<div class="first-screen__content_main_title-banner_content">
-								<p>Welcome to the epicenter of AI innovation. FutureTech AI News is your passport to a world
-									where machines think, learn,
-									and reshape the future. Join us on this visionary expedition into the heart of AI.</p>
-							</div>
-						</div>
-						<div class="solid-line"></div>
-						<div class="indicators-items d-flex nowrap-flex">
-							<div class="indicators-item item-1">
-								<div class="indicators-item_number">300<span>+</span></div>
-								<div class="indicators-item_subscribe">Resources available</div>
-							</div>
-							<div class="indicators-item item-2 vertical-line">
-								<div class="indicators-item_number">12k<span>+</span></div>
-								<div class="indicators-item_subscribe">Total Downloads</div>
-							</div>
-							<div class="indicators-item item-3">
-								<div class="indicators-item_number">10k<span>+</span></div>
-								<div class="indicators-item_subscribe">Active Users</div>
+		<div class="first-screen__wiht-out-header">
+			<div class="content-wrap">
+				<div class="parent first-screen__wiht-out-header_grid">
+					<div class="div1 title-container">
+						<div class="div1 title-container">
+							<div class="title-banner">
+								<div class=".title-container__under-title">Your Journey to Tomorrow Begins Here</div>
+								<div class="title-container__title">
+									<h1>Explore the Frontiers of Artificial Intelligence</h1>
+								</div>
+								<div class="title-container__content">
+									<p>Welcome to the epicenter of AI innovation. FutureTech AI News is your passport to a world
+										where machines think, learn,
+										and reshape the future. Join us on this visionary expedition into the heart of AI.</p>
+								</div>
 							</div>
 						</div>
 					</div>
-					<div class="first-screen__content_solar-corona">
-						<div class="first-screen__content_solar-corona_background">
-							<div class="users-img d-flex ">
-								<div class="user-img user-img-1">1</div>
-								<div class="user-img user-img-2">2</div>
-								<div class="user-img user-img-3">3</div>
-								<div class="user-img user-img-4">4</div>
+
+					<div class="div2 indicators-item item-1">
+						<div class="indicators-item_number">300<span>+</span></div>
+						<div class="indicators-item_subscribe">Resources available</div>
+					</div>
+
+					<div class="div3 indicators-item item-2">
+						<div class="indicators-item_number">12k<span>+</span></div>
+						<div class="indicators-item_subscribe">Total Downloads</div>
+					</div>
+
+					<div class="div4 indicators-item item-3">
+						<div class="indicators-item_number">10k<span>+</span></div>
+						<div class="indicators-item_subscribe">Active Users</div>
+					</div>
+
+					<div class="div5 content_solar-corona">
+						<!-- <div class="wrapper__content_solar-corona"> -->
+							<div class="users-img relative d-flex">
+								<div class="user-img user-img-1 absolute"></div>
+								<div class="user-img user-img-2 absolute"></div>
+								<div class="user-img user-img-3 absolute"></div>
+								<div class="user-img user-img-4 absolute"></div>
 							</div>
 							<div class="first-screen__content_solar-corona_title">Explore 1000+ resources</div>
 							<div class="first-screen__content_solar-corona_subscribe">
 								<p>Over 1,000 articles on emerging tech
 									trends and breakthroughs.</p>
 							</div>
-							<div class="btn-main-indicators">
+							<div class="btn-main-indicators d-flex">
 								Explore Resources
 								<button class="btn btn__arrow"></button>
 							</div>
-						</div>
+
+						<!-- </div> -->
 					</div>
-				</div>
-				<div class="solid-line"></div>
 
-				<div class="first-screen__information-board d-flex">
-
-					<div class="information-board__item first-item">
+					<div class="div6 information-board__item first-item first-item">
 						<div class="icon__information-board"></div>
 						<div class="information-board_content d-flex space-between">
 							<div>
@@ -169,8 +162,7 @@
 						</div>
 						<div class="comment">Over 1,000 articles published monthly</div>
 					</div>
-
-					<div class="information-board__item second-item">
+					<div class="div7 information-board__item first-item second-item">
 						<div class="icon__information-board"></div>
 						<div class="information-board_content d-flex space-between">
 							<div>
@@ -181,8 +173,7 @@
 						</div>
 						<div class="comment">50+ renowned AI experts on our team</div>
 					</div>
-
-					<div class="information-board__item third-item">
+					<div class="div8 information-board__item first-item third-item">
 						<div class="icon__information-board"></div>
 						<div class="information-board_content d-flex space-between">
 							<div>
@@ -193,18 +184,13 @@
 						</div>
 						<div class="comment">2 million monthly readers</div>
 					</div>
-
 				</div>
 			</div>
-			<div class="solid-line "></div>
 		</div>
-
-		<!-- <div class="solid-line"></div> -->
-
 	</div>
 
 
-	</div>
+	</div> -->
 	<script src="script/script.js"></script>
 </body>
 
