--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
@@ -98,73 +98,71 @@
 		</header>
 		<div class="first-screen__wiht-out-header">
 			<div class="content-wrap">
-				<div class="parent first-screen__wiht-out-header_grid">
-					<div class="div1 title-container">
-						<div class="div1 title-container">
-							<div class="title-banner">
-								<div class=".title-container__under-title">Your Journey to Tomorrow Begins Here</div>
-								<div class="title-container__title">
-									<h1>Explore the Frontiers of Artificial Intelligence</h1>
-								</div>
-								<div class="title-container__content">
-									<p>Welcome to the epicenter of AI innovation. FutureTech AI News is your passport to a world
-										where machines think, learn,
-										and reshape the future. Join us on this visionary expedition into the heart of AI.</p>
-								</div>
+				<div class="parent__first-screen__wiht-out-header_grid first-screen__wiht-out-header_grid">
+					<div class="div1__first-screen__wiht-out-header_grid title-container">
+						<div class="title-banner">
+							<div class=".title-container__under-title">Your Journey to Tomorrow Begins Here</div>
+							<div class="title-container__title">
+								<h1>Explore the Frontiers of Artificial Intelligence</h1>
+							</div>
+							<div class="title-container__content">
+								<p>Welcome to the epicenter of AI innovation. FutureTech AI News is your passport to a world
+									where machines think, learn,
+									and reshape the future. Join us on this visionary expedition into the heart of AI.</p>
 							</div>
 						</div>
 					</div>
 
-					<div class="div2 indicators-item item-1">
+					<div class="div2__indicators-item indicators-item item-1">
 						<div class="indicators-item_number">300<span>+</span></div>
 						<div class="indicators-item_subscribe">Resources available</div>
 					</div>
 
-					<div class="div3 indicators-item item-2">
+					<div class="div3__indicators-item indicators-item item-2">
 						<div class="indicators-item_number">12k<span>+</span></div>
 						<div class="indicators-item_subscribe">Total Downloads</div>
 					</div>
 
-					<div class="div4 indicators-item item-3">
+					<div class="div4__indicators-item indicators-item item-3">
 						<div class="indicators-item_number">10k<span>+</span></div>
 						<div class="indicators-item_subscribe">Active Users</div>
 					</div>
 
-					<div class="div5 content_solar-corona">
+					<div class="div5__content_solar-corona content_solar-corona">
 						<!-- <div class="wrapper__content_solar-corona"> -->
-							<div class="users-img relative d-flex">
-								<div class="user-img user-img-1 absolute"></div>
-								<div class="user-img user-img-2 absolute"></div>
-								<div class="user-img user-img-3 absolute"></div>
-								<div class="user-img user-img-4 absolute"></div>
-							</div>
-							<div class="first-screen__content_solar-corona_title">Explore 1000+ resources</div>
-							<div class="first-screen__content_solar-corona_subscribe">
-								<p>Over 1,000 articles on emerging tech
-									trends and breakthroughs.</p>
-							</div>
-							<div class="btn-main-indicators d-flex">
-								Explore Resources
-								<button class="btn btn__arrow"></button>
-							</div>
+						<div class="users-img relative d-flex">
+							<div class="user-img user-img-1 absolute"></div>
+							<div class="user-img user-img-2 absolute"></div>
+							<div class="user-img user-img-3 absolute"></div>
+							<div class="user-img user-img-4 absolute"></div>
+						</div>
+						<div class="first-screen__content_solar-corona_title">Explore 1000+ resources</div>
+						<div class="first-screen__content_solar-corona_subscribe">
+							<p>Over 1,000 articles on emerging tech
+								trends and breakthroughs.</p>
+						</div>
+						<div class="btn-main-indicators d-flex">
+							Explore Resources
+							<button class="btn btn__arrow"></button>
+						</div>
 
 						<!-- </div> -->
 					</div>
 
-					<div class="div6 information-board__item first-item first-item">
+					<div class="div6__information-board__item information-board__item  first-item d-flex column-flex">
 						<div class="icon__information-board"></div>
-						<div class="information-board_content d-flex space-between">
+						<div class="information-board_content d-flex space-between align-center">
 							<div>
 								<h3 class="title__information-board_content">Latest News Updates</h3>
 								<div class="supscribe">Stay Current</div>
 							</div>
-							<button class="arrow_yellow-round"></button>
+							<button class="arrow_yellow-round  "></button>
 						</div>
 						<div class="comment">Over 1,000 articles published monthly</div>
 					</div>
-					<div class="div7 information-board__item first-item second-item">
+					<div class="div7__information-board__item information-board__item  second-item d-flex column-flex">
 						<div class="icon__information-board"></div>
-						<div class="information-board_content d-flex space-between">
+						<div class="information-board_content d-flex space-between align-center">
 							<div>
 								<h3 class="title__information-board_content">Expert Contributors</h3>
 								<div class="supscribe">Trusted Insights</div>
@@ -173,9 +171,9 @@
 						</div>
 						<div class="comment">50+ renowned AI experts on our team</div>
 					</div>
-					<div class="div8 information-board__item first-item third-item">
+					<div class="div8__information-board__item information-board__item  third-item d-flex column-flex">
 						<div class="icon__information-board"></div>
-						<div class="information-board_content d-flex space-between">
+						<div class="information-board_content d-flex space-between align-center">
 							<div>
 								<h3 class="title__information-board_content">Global Readership</h3>
 								<div class="supscribe">Worldwide Impact</div>
@@ -190,7 +188,24 @@
 	</div>
 
 
-	</div> -->
+	<div class="container__future-tech-features">
+		<div class="content-wrap">
+			<div class="parent_future-tech-features">
+				<div class="div1">
+					<button>Unlock the Power of</button>
+					FutureTech Features
+				</div>
+				<div class="div2"> </div>
+				<div class="div3"> </div>
+				<div class="div4"> </div>
+				<div class="div5"> </div>
+			</div>
+		</div>
+	</div>
+
+
+
+	</div>
 	<script src="script/script.js"></script>
 </body>
 
