--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
@@ -26,7 +26,7 @@
 						<button class="btn btn__arrow"></button>
 					</div>
 				</div>
-				<div class="solid-line"></div>
+				<!-- <div class="solid-line"></div> -->
 			</div>
 
 			<div class="content-wrap gray-background">
@@ -153,7 +153,7 @@
 						<div class="icon__information-board"></div>
 						<div class="information-board_content d-flex space-between align-center">
 							<div>
-								<h3 class="title__information-board_content">Latest News Updates</h3>
+								<h4 class="title__information-board_content">Latest News Updates</h4>
 								<div class="supscribe">Stay Current</div>
 							</div>
 							<button class="arrow_yellow-round  "></button>
@@ -164,7 +164,7 @@
 						<div class="icon__information-board"></div>
 						<div class="information-board_content d-flex space-between align-center">
 							<div>
-								<h3 class="title__information-board_content">Expert Contributors</h3>
+								<h4 class="title__information-board_content">Expert Contributors</h4>
 								<div class="supscribe">Trusted Insights</div>
 							</div>
 							<button class="arrow_yellow-round"></button>
@@ -175,7 +175,7 @@
 						<div class="icon__information-board"></div>
 						<div class="information-board_content d-flex space-between align-center">
 							<div>
-								<h3 class="title__information-board_content">Global Readership</h3>
+								<h4 class="title__information-board_content">Global Readership</h4>
 								<div class="supscribe">Worldwide Impact</div>
 							</div>
 							<button class="arrow_yellow-round"></button>
@@ -187,23 +187,69 @@
 		</div>
 	</div>
 
-		<div class="container__future-tech-features">
+	<div class="main-container__future-tech-features">
+		<div class="head-container__future-tech-features">
+			<div class="content-wrap gray-background">
+				<button>Unlock the Power of</button>
+				<h2>FutureTech Features</h2>
+			</div>
+		</div>
+		<div class="body-container__future-tech-features">
 			<div class="content-wrap">
 				<div class="parent_future-tech-features">
-					<div class="div1">
-						<button>Unlock the Power of</button>
-						FutureTech Features
+					<div class=" div1">
+						<div class="icon__future-tech-features">1</div>
+						<h3>Future Technology Blog</h3>
+						<div class="supscribe">Stay informed with our blog section dedicated to future technology.</div>
 					</div>
-					<div class="div2"> </div>
-					<div class="div3"> </div>
-					<div class="div4"> </div>
-					<div class="div5"> </div>
+					<div class="div2">
+						<div>
+							<h4>Quantity</h4>
+							<div class="supscribe">Over 1,000 articles on emerging tech trends and breakthroughs.</div>
+						</div>
+						<div>
+							<h4>Variety</h4>
+							<div class="supscribe">Articles cover fields like AI, robotics, biotechnology, and more.</div>
+						</div>
+						<div>
+							<h4>Frequency</h4>
+							<div class="supscribe">Fresh content added daily to keep you up to date.</div>
+						</div>
+						<div>
+							<h4>Authoritative</h4>
+							<div class="supscribe">Written by our team of tech experts and industry professionals.</div>
+						</div>
+					</div>
+					<div class="div3">
+						<div class="icon__future-tech-features">2</div>
+						<h3>Research Insights Blogs</h3>
+						<div class="supscribe">Dive deep into future technology concepts with our research section.</div>
+					</div>
+					<div class="div4">
+						<div>
+							<h4>Depth</h4>
+							<div class="supscribe">500+ research articles for in-depth understanding.</div>
+						</div>
+						<div>
+							<h4>Graphics</h4>
+							<div class="supscribe">Visual aids and infographics to enhance comprehension.</div>
+						</div>
+						<div>
+							<h4>Trends</h4>
+							<div class="supscribe">Explore emerging trends in future technology research.</div>
+						</div>
+						<div>
+							<h4>Contributors</h4>
+							<div class="supscribe">Contributions from tech researchers and academics.</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
 
-	</div> 
+
 	<script src="script/script.js"></script>
 </body>
 
