--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
@@ -12,6 +12,8 @@
 		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="styles/styles.css">
+	<!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
 </head>
 
 <body>
@@ -299,9 +301,17 @@
 				</div>
 			</div>
 			<div class="content-wrap">
-				<div class="explore-futureTech__body-container ">
-					<h2 style="color: red;"> block under development</h2>
+				<!-- <div class="explore-futureTech__body-container "> -->
+				<!-- <h2 style="color: red;"> block under development</h2> -->
+				<div class="swiper-container">
+					<div class="button">All</div>
+					<div class="button">Quantum Computing</div>
+					<div class="button">AI Ethics</div>
+					<div class="button">Space Exploration</div>
+					<div class="button">Biotechnology</div>
+					<div class="button">Renewable Energy</div>
 				</div>
+				<!-- </div> -->
 			</div>
 		</div>
 	</div>
@@ -657,9 +667,10 @@
 				<div class="be-part-of-the-future-tech-revolution__head-container_helper">
 					<div class="big-logo-helper d-flex ">
 						<div class=" big-logo ">
-							<img src=" sourse/img/logo.svg" alt="logo">
+							<img src=" sourse/img/logo.svg" alt="big-logo">
 						</div>
-						<div class="be-part-of-the-future-tech-revolution__under-title under-title_h2 d-flex">Learn, Connect, and
+						<div class="be-part-of-the-future-tech-revolution__under-title under-title_h2 d-flex">Learn, Connect,
+							and
 							Innovate
 						</div>
 					</div>
@@ -685,14 +696,162 @@
 							<h2>Be Part of the Future Tech Revolution</h2>
 						</div>
 						<div class="be-part-of-the-future-tech-revolution__p ">
-							<p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect with fellow tech
-							enthusiasts, and drive innovation in the industry. Join a dynamic community of forward-thinkers.</p>
+							<p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect
+								with fellow tech
+								enthusiasts, and drive innovation in the industry. Join a dynamic community of forward-thinkers.
+							</p>
 						</div>
 					</div>
 				</div>
 			</div>
+
+			<div class="be-part-of-the-future-tech-revolution__body-container">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Resource Access</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
+						wide range of resources, including ebooks, whitepapers, reports.</div>
+				</div>
+
+				<div class="be-part-of-the-future-tech-revolution__body-container_item">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Community Forum</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
+						forum to discuss industry trends and collaborate with peers.</div>
+				</div>
+
+				<div class="be-part-of-the-future-tech-revolution__body-container_item">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Tech Events</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
+						tech events, webinars and conferences to enhance your knowledge.</div>
+				</div>
+			</div>
 		</div>
 	</div>
+
+	<footer>
+		<nav>
+			<nav class="desktop-block">
+				<ul class="footer-menu-home ">
+					Home
+					<li>
+						<a href="#">Features</a>
+					</li>
+					<li>
+						<a href="#">Blogs</a>
+					</li>
+					<li>
+						<a href="#">Resources <button>New</button></a>
+					</li>
+					<li>
+						<a href="#">Testimonials</a>
+					</li>
+					<li>
+						<a href="#">Contact Us</a>
+					</li>
+					<li>
+						<a href="#">Newsletter</a>
+					</li>
+				</ul>
+
+				<ul class="footer-menu-news ">
+					News
+					<li>
+						<a href="#">Trending Stories</a>
+					</li>
+					<li>
+						<a href="#">Featured Videos</a>
+					</li>
+					<li>
+						<a href="#">Technology </a>
+					</li>
+					<li>
+						<a href="#">Health</a>
+					</li>
+					<li>
+						<a href="#">Politics</a>
+					</li>
+					<li>
+						<a href="#">Environment</a>
+					</li>
+				</ul>
+
+				<ul class="footer-menu-podcast ">
+					Podcasts
+					<li>
+						<a href="#">AI Revolution</a>
+					</li>
+					<li>
+						<a href="#">AI Revolution <button>New</button></a>
+					</li>
+					<li>
+						<a href="#">Resources </a>
+					</li>
+					<li>
+						<a href="#">TechTalk AI</a>
+					</li>
+					<li>
+						<a href="#">AI Conversations</a>
+					</li>
+				</ul>
+
+				<ul class="footer-menu-blogs ">
+					Blogs
+					<li>
+						<a href="#">Quantum Computing</a>
+					</li>
+					<li>
+						<a href="#">AI Ethics</a>
+					</li>
+					<li>
+						<a href="#">Space Exploration </a>
+					</li>
+					<li>
+						<a href="#">Biotechnology<button>New</button></a>
+					</li>
+					<li>
+						<a href="#">Renewable Energy</a>
+					</li>
+					<li>
+						<a href="#">Biohacking</a>
+					</li>
+				</ul>
+			</nav>
+
+			<nav class="mobile-block">
+				<ul class="footer-menu ">
+					<li>
+						<a href="#">Home</a>
+					</li>
+					<li>
+						<a href="#">News</a>
+					</li>
+					<li>
+						<a href="#">Podcasts</a>
+					</li>
+					<li>
+						<a href="#">Resources</a>
+					</li>
+				</ul>
+			</nav>
+			<nav></nav>
+	</footer>
 
 
 
